--- a/tw-reservoir.ipynb
+++ b/tw-reservoir.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 👇 colab only\n",
-    "# !pip install -q pytest-playwright\n",
-    "# !playwright install"
+    "# install dependencies for google colab\n",
+    "if 'google.colab' in str(get_ipython()):\n",
+    "    !pip install -q pytest-playwright\n",
+    "    !playwright install"
    ]
   },
   {
@@ -320,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
